# hyprrust

./: Cargo.toml  README.md
examples/: events_all_instances.rs  events_filtered.rs  events_listen_in_more_tasks.rs  notify_error.rs  simple_command.rs  simple_command_sync.rs  simple_data.rs  simple_data_sync.rs  simple_events.rs  simple_recipe.rs  simple_recipe_sync.rs  single_events.rs  single_events_sync.rs
src/: connection.rs  errors.rs  events.rs  lib.rs
src/ctl/: arguments.rs  mod.rs
src/ctl/command/: commands.rs  mod.rs
src/ctl/commands/: all_commands.rs  commands.rs  mod.rs
src/ctl/data/: data_models.rs  deserializing.rs  mod.rs  prelude.rs
src/events/: all_events.rs  common.rs  events_conn.rs  mod.rs  single_event.rs  single_event_sync.rs
