[package]
name = "hyprrust"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
hyprrust_macros = { path = "../hyprrust_macros" }
