[package]
name = "hyprrust"
version = "0.1.0"
edition = "2021"

[features]
default = ["sync", "async"]
sync = []
async = ["dep:tokio"]

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["user"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync", "io-util"], optional = true }
hyprrust_macros = { path = "../hyprrust_macros" }
log = { version = "0.4.26", features = ["kv"] }
