[package]
name = "hyprrust"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["Hyprland", "IPC"]
description = "A crate that provides an interface with the Hyprland sockets."
repository = "https://github.com/andrewandreii/hyprrust"
readme = "README.md"

[features]
default = ["sync", "async"]
sync = []
async = ["dep:tokio", "dep:futures"]

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["user"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync", "io-util"], optional = true }
hyprrust_macros = { path = "../hyprrust_macros", version = "0.2.0" }
log = { version = "0.4.26", features = ["kv"] }
futures = { version = "0.3.31", default-features = false, features = ["std"], optional = true }
